# ACM-Certificate-Sync

./: .dockerignore  .editorconfig  Cargo.toml  Dockerfile  LICENSE  README.md  deployment.yaml  release.toml  skaffold.yaml
.github/workflows/: cargo.yml  docker.yml  helm.yml
chart/: Chart.yaml  README.md  values.yaml
chart/templates/: NOTES.txt  _helpers.tpl  clusterrole.yaml  cm.yaml  deployment.yaml  rolebinding.yaml  service.yaml  serviceaccount.yaml
chart/templates/tests/: test-connection.yaml
docker/: Dockerfile  Dockerfile-ci  docker-compose.override.yml  docker-compose.yml
src/: lib.rs  main.rs
src/common/: mod.rs
src/destination/: aws.rs  mod.rs
src/provider/: aws.rs  mod.rs
src/source/: kubernetes.rs  mod.rs
tests/: integration_test.rs
tests/resources/: certificate.yaml  secret.yaml
