[package]
name = "acs"
version = "0.1.0"
authors = ["Wykiki <wykiki@wyki.io>"]
edition = "2018"
keywords = ["kubernetes", "certificate", "ssl", "tls", "aws", "acm"]
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
kube = "0.34.0"
kube-derive = "0.34.0"
k8s-openapi = { version = "0.8.0", default-features = false, features = ["v1_17"] }
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.4"
anyhow = "1.0.28"
env_logger = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.12"
openssl-sys = "0.9"
openssl = "0.10"
rusoto_core = "0.44"
rusoto_acm = "0.44"
rusoto_elbv2 = "0.44"
async-trait = "0.1.36"
bytes = "0.5.5"
envy = "0.4"

[dev-dependencies]
futures-await-test = "0.3.0"
indoc = "0.3"
