[package]
name = "cert-sync"
version = "0.1.1-rc.4"
authors = ["Wykiki <wykiki@wyki.io>"]
edition = "2018"
keywords = ["kubernetes", "certificate", "tls", "ssl", "aws", "acm", "alb", "elb"]
readme = "README.md"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# common
anyhow = "1.0.28"
async-trait = "0.1.36"
env_logger = "0.7.1"
log = "0.4.8"
futures = "0.3.4"
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.12"
openssl-sys = "0.9"
openssl = "0.10"
# kubernetes
kube = "0.43.0"
kube-runtime = "0.43.0"
k8s-openapi = { version = "0.9.0", default-features = false, features = ["v1_17"] }
# aws
rusoto_core = "0.44"
rusoto_credential = "0.44"
rusoto_acm = "0.44"
rusoto_elbv2 = "0.44"
bytes = "0.5.5"
hyper = { version = "0.13.6", features = ["runtime"] }
hyper-tls = "0.4"
hyper-proxy = "0.8"

[dev-dependencies]
futures-await-test = "0.3.0"
indoc = "0.3"
